--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,25 +1,22 @@
-# Set this website's info
-# Change "coffeebank" to your GitHub username
-# Change "moonrise" to your repository name
-url: "https://coffeebank.github.io"
-baseurl: "/moonrise"
+url: "https://blazenarchy.net"
+baseurl: "/"
 siteIcon: media/android-chrome-192x192.png
-siteYear: 2020
-siteFooterlink: https://github.com/coffeebank/moonrise
+siteYear: 2021
+siteFooterlink: https://github.com/blazenarchy/website
 showinSearchEngines: true
-# googleAnalyticsID: (uncomment to use)
+googleAnalyticsID: G-T77HTB9LC3
 
 
 # Set basic server info
-serverName: Moonrise MC
-serverDescription: A Minecraft server where we have lots of fun!
-serverIP: 79.46.31.53:3498
+serverName: Blazenarchy
+serverDescription: An anarchy themed Minecraft server running Minecraft 1.16.
+serverIP: blazenarchy.net
 
 
 # Discord information
-discordInvite: https://discord.gg/minecraft
-discordServerID: 299881420891881473
-discordChannelID: 450428756855750666
+discordInvite: https://discord.gg/VzHEWGZ
+discordServerID: 697108890797736007
+discordChannelID: 700318320930586645
 
 
 # Navbar Links at the top of the page
